--- a/.github/workflows/openwrt-ci.yml
+++ b/.github/workflows/openwrt-ci.yml
@@ -10,6 +10,19 @@
 name: xvpro
 
 on:
+  # 定时触发
+  schedule:
+    - cron: 0 22 * * *
+
+# release触发
+  release:
+    types: [published]
+
+# 点赞触发
+#  watch:
+#    types: [started]
+
+# 编辑触发
   push:
     branches: 
       - master
